apps/safeqbit-local-hq/immich/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/managed-by: flux
    cluster: safeqbit-local-hq
    backup.policy/velero: biweekly
